--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
 			<version>5.8.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.15</version>
+		</dependency>
 	</dependencies>
 </project>
